@@ -18,12 +18,15 @@ remctl() provides a simplified client API for the remctl protocol.  Given
 the host, port, service principal for authentication, and command to run,
 it opens a connection to the remote system, sends the command via the
 remctl protocol, reads the results, closes the connection, and returns the
-result as a remctl_result struct.  I<host> is a hostname or IP address and
-must be non-NULL.  I<port> is the port to connect to; if 0, the default
-port of 4444 is used.  I<principal> is the service principal to use for
-authentication; if NULL, C<host/I<host>> in the default local realm is
-used.  I<command> is the command to run as a NULL-terminated array of
-nul-terminated strings.
+result as a remctl_result struct.
+
+I<host> is a hostname or IP address and must be non-NULL.  I<port> is the
+port to connect to; if 0, the library first attempts to connect to the
+registered port of 4373 and then tries the legacy port of 4444 if that
+fails.  Future versions of the library will drop this fallback to 4444.
+I<principal> is the service principal to use for authentication; if NULL,
+C<host/I<host>> in the default local realm is used.  I<command> is the
+command to run as a NULL-terminated array of nul-terminated strings.
 
 The remctl protocol uses Kerberos v5 via GSS-API for authentication.  The
 underlying GSS-API library will use the default ticket cache for
@@ -70,6 +73,19 @@ returns a newly allocated remctl_result struct with either an error
 message in the error field or the results of the command filled out as
 described above.  If remctl() returns NULL, errno will be set to an
 appropriate error code (generally ENOMEM).
+
+=head1 CAVEATS
+
+The default behavior, when a port of 0 is given, of trying 4373 and
+falling back to 4444 will be removed in a future version of this library
+in favor of using the C<remctl> service in F</etc/services> if set and
+then falling back on only 4373.  4444 was the poorly-chosen original
+remctl port and should be phased out.
+
+=head1 NOTES
+
+The remctl port number, 4373, was derived by tracing the diagonals of a
+QWERTY keyboard up from the letters C<remc> to the number row.
 
 =head1 SEE ALSO
 
