@@ -40,7 +40,9 @@ Show a brief usage message and then exit.
 
 =item B<-p> I<port>
 
-Connect to the server on I<port> rather than the default of 4444.
+Connect to the server on I<port>.  If this option isn't given, the client
+first tries the registered remctl port (4373) and then falls back on the
+legacy port (4444) if that fails.
 
 =item B<-s> I<service>
 
@@ -68,7 +70,7 @@ Release an afs volume called ls.tripwire:
 
     remctl lsdb afs release ls.tripwire
 
-=head1 NOTES
+=head1 CAVEATS
 
 When using Heimdal with triple-DES keys and talking to old servers that
 only speak version one of the remctl protocol, B<remctl> may have problems
@@ -76,6 +78,17 @@ with MIC verification.  This doesn't affect new clients and servers since
 the version two protocol doesn't use MICs.  If you are using Heimdal and
 run into MIC verification problems, see the COMPATIBILITY section of
 gssapi(3).
+
+The default behavior, when the port is not specified, of trying 4373 and
+falling back to 4444 will be removed in a future version of B<remctl> in
+favor of using the C<remctl> service in F</etc/services> if set and then
+falling back on only 4373.  4444 was the poorly-chosen original remctl
+port and should be phased out.
+
+=head1 NOTES
+
+The remctl port number, 4373, was derived by tracing the diagonals of a
+QWERTY keyboard up from the letters C<remc> to the number row.
 
 =head1 SEE ALSO
 
